--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     ],
     "license": "MIT",
     "require": {
+        "darkaonline/l5-swagger": "^9.0",
         "laravel/framework": "^12.0",
         "laravel/octane": "^2.8",
         "tymon/jwt-auth": "^2.2"
