--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "darkaonline/l5-swagger": "^9.0",
         "laravel/framework": "^12.0",
         "laravel/octane": "^2.8",
+        "swoft/swoole-ide-helper": "^4.4",
         "tymon/jwt-auth": "^2.2"
     },
     "require-dev": {
